fix for overflowing and added three classes
Added the following classes: text-right, text-left and vertical-align.
Also fixed the overflowing on mobile devices.

--- a/src/util.css
+++ b/src/util.css
@@ -14,6 +14,14 @@
   text-align: center;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .centered {
   position: fixed;
   top: 50%;
@@ -29,4 +37,9 @@
 .horizontal-align {
   display: flex;
   justify-content: center;
+}
+
+.vetical-align {
+  display: flex;
+  align-items: center;
 }
